--- a/Ler_PDF_usando_PyPDF2.ipynb
+++ b/Ler_PDF_usando_PyPDF2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORpiBV6J0m4WIBtapOO9nw",
+      "authorship_tag": "ABX9TyN9yqP1gJGd2oybZfRKu2j8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,83 +82,23 @@
     {
       "cell_type": "code",
       "source": [
-        "!cd drive/MyDrive/ && ls *.pdf -al"
+        "!cd drive/MyDrive/TE-PLNCG2024/ && ls *.* -al"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6vJQh62iFnYu",
-        "outputId": "3f236eb5-dc96-44d9-9c63-2da556977046"
+        "outputId": "467e2cb1-0807-430c-c51c-207b91d35fbf"
       },
-      "execution_count": 13,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-rw------- 1 root root        0 Feb 24  2015  15001722638.pdf\n",
-            "-rw------- 1 root root  1408700 Apr 23  2017 '2016-05-11 - Documento referencia autenticacao - FINAL.pdf'\n",
-            "-rw------- 1 root root  2214799 Nov  1 01:03  653988a3251abbc84c2874f3_ebook_black_dos_fretes_23.pdf\n",
-            "-rw------- 1 root root   148442 Feb 27  2019 'Agendamento INSS.pdf'\n",
-            "-rw------- 1 root root 52695420 Apr 24  2019 'american english studentbook workbook second edition.pdf'\n",
-            "-rw------- 1 root root  1151420 May 11  2022  APOSTILA_GEODESIA_UFPR_2007.pdf\n",
-            "-rw------- 1 root root   324342 May 19  2022  apostila-introducao-shell.pdf\n",
-            "-rw------- 1 root root  1601540 Feb 13  2019 'Apostila super-heróis.pdf'\n",
-            "-rw------- 1 root root   728391 Apr 23  2017  BPMN.pdf\n",
-            "-rw------- 1 root root    23943 Aug 16  2019 'Carta à Jaqueline (1).pdf'\n",
-            "-rw------- 1 root root    23947 Aug 16  2019 'Carta à Jaqueline (2).pdf'\n",
-            "-rw------- 1 root root    24146 Aug 16  2019 'Carta à Jaqueline.pdf'\n",
-            "-rw------- 1 root root  4145633 Mar  1  2019 'Cartelas Corrupção tem jeito.pdf'\n",
-            "-rw------- 1 root root   157742 Jul  4  2016 'CFTV - Acessos.pdf'\n",
-            "-rw------- 1 root root   192192 Mar  1  2014 'Conteúdo Programático Nível Superior.pdf'\n",
-            "-rw------- 1 root root    51968 Feb 24  2023  contracheque_2_2023.pdf\n",
-            "-rw------- 1 root root  2363186 Mar  1  2019 'Controle Externo das Aquisições.pdf'\n",
-            "-rw------- 1 root root  2090410 Oct 23  2017 'Cópia de Acesso à informação para a produção do conhecimento - 2017-08-30.pdf'\n",
-            "-rw------- 1 root root  8753597 Jan 30  2017  Cópia-de-Livro-Lilleliis-Magical-Amigurumi-Toys.pdf\n",
-            "-rw------- 1 root root    17964 May  1  2019  declaracao.1556672225289.pdf\n",
-            "-rw------- 1 root root   264948 Jan 31  2013 'Decreto nº 7892.pdf'\n",
-            "-r-------- 1 root root  8055386 Nov  5  2021  ebook-firewall-com-pfsense-guia-rapido-pedro-delfino.pdf\n",
-            "-rw------- 1 root root   156228 May 18  2017  edson-cv.pdf\n",
-            "-rw------- 1 root root   212978 Aug  9  2022  exame-periodico_guias.pdf\n",
-            "-rw------- 1 root root   153658 Apr  9  2020  ExtratoIRCaixa-FinanciamentoImovel.pdf\n",
-            "-rw------- 1 root root   123268 Mar  1  2019 'Fatores Habilitadores - Terceirização de TI - 6847-17246-1-SM.pdf'\n",
-            "-rw------- 1 root root   144191 Oct 14  2017  fatura.pdf\n",
-            "-rw------- 1 root root  4347475 May 11  2022  GEODESIA_APOSTILA_2018_25_jun.pdf\n",
-            "-rw------- 1 root root  1807805 Feb 10  2021 'Gerência de Projetos - EXTENSÃO 2017 - Inicio Escopo Qualidade Prazo Custo.pdf'\n",
-            "-rw------- 1 root root   919369 Oct 26  2013  GuiaComiteTI.pdf\n",
-            "-r-------- 1 root root   528345 Sep 14  2017  IMPLEMENTAÇÃO.pdf\n",
-            "-rw------- 1 root root    78142 Aug  9  2019  Internet___Ban:king:::CAIXA.pdf\n",
-            "-rw------- 1 root root    66624 Oct 21  2013  inventario-de-necessidades-PDTI.pdf\n",
-            "-rw------- 1 root root    36303 May 21  2023  IRPF2022.pdf\n",
-            "-rw------- 1 root root   598923 May 16  2018  manual_elaboracao_plano_dados_abertos.pdf\n",
-            "-rw------- 1 root root  2145366 Oct 19  2014  manual_instalacao_certificado_digital_ipad4.pdf\n",
-            "-rw------- 1 root root  2483013 Jun 20  2017 'Manual - Secao de Modelagem de Processo.pdf'\n",
-            "-rw------- 1 root root  9030479 May 27  2022 'Mastering GeoServer (Colin Henderson) (z-lib.org).pdf'\n",
-            "-rw------- 1 root root 25916140 May 27  2022 'Mastering PostGIS Modern ways to create, analyze, and implement spatial data (Dominik Mikiewicz, Michal Mackiewicz etc.) (z-lib.org).pdf'\n",
-            "-rw------- 1 root root    34076 Sep 12  2021 'Nota Pública - NC Reprocessamento PS2021.pdf'\n",
-            "-rw------- 1 root root    70853 May 24  2018 'Notificação extra-judicial - BB - Mãe.pdf'\n",
-            "-rw------- 1 root root  1404910 May 24  2018 'Notificação extra-judicial - Edson Protocolada.pdf'\n",
-            "-rw------- 1 root root   578960 Jan 31  2013 'OFÍCIO-CIRCULAR Nº 01-2013 29-01-2013.pdf'\n",
-            "-rw------- 1 root root    64483 Dec 29  2016 'Oficio de Aceite HP_UFPR_OPI-0125375744__UFRN.pdf'\n",
-            "-rw------- 1 root root  3722749 May 12  2022 'Perfil MGB 2.0.pdf'\n",
-            "-rw------- 1 root root  3638870 Jun 22  2018  plano-de-dados-abertos-pda-gsi-2017-2018.pdf\n",
-            "-rw------- 1 root root 32395055 May 27  2022 'PostGIS Cookbook Store, organize, manipulate, and analyze spatial data (Mayra Zurbaran et al.) (z-lib.org).pdf'\n",
-            "-rw------- 1 root root 47540150 May 27  2022 'PostGIS in Action, 3rd Edition (Leo S. Hsu, Regina Obe) (z-lib.org).pdf'\n",
-            "-rw------- 1 root root  1823490 May 27  2022 'Python e Django Fundamentos - Ramiro B. da Luz.pdf'\n",
-            "-rw------- 1 root root   146213 Nov 12  2013 'Questionamento ao MPF - Carteirinhas Santander.pdf'\n",
-            "-rw------- 1 root root   128395 Oct 14 07:37  Rep_equiv_elipsoide.pdf\n",
-            "-rw------- 1 root root    77254 Apr  4 16:46 'Resumo 01 MARCELO JOSE PEREIRA DA CUNHA.pdf'\n",
-            "-rw------- 1 root root   107403 Apr  4 16:53 'Resumo 02 VITOR CORREA DE BRITO.pdf'\n",
-            "-rw------- 1 root root   865708 Nov 15  2016 'RNP - Associados Corporativos - Parecer Jurídico Orçamentário.pdf'\n",
-            "-rw------- 1 root root    13076 Sep  2  2020 'SIGEleição - Sistema Integrado de Gestão de Eleições.pdf'\n",
-            "-rw------- 1 root root  1285779 Oct 14 07:37  sistema_utm.pdf\n",
-            "-rw------- 1 root root  1005733 Nov 26  2015 'Site Survey - UFPR_v3.0.pdf'\n",
-            "-rw------- 1 root root   448712 Aug  5  2022 'Solicitação de Exame - Ultrassonografia.pdf'\n",
-            "-rw------- 1 root root  2681321 May 18  2022  spatial_database_systems_-_postgis_parte_2.pdf\n",
-            "-rw------- 1 root root 11476841 Oct 14 07:38  vF_OficinaINDE_QualidadeDadosGeoespaciais_31marco2023.pdf\n",
-            "-rw------- 1 root root   230964 Dec 12  2017  Vivian.pdf\n",
-            "-rw------- 1 root root   127273 Oct  3  2017 'Votantes HC.pdf'\n"
+            "-rw------- 1 root root 16029 Apr  4 19:04 'Ler PDF usando PyPDF2.ipynb'\n",
+            "-rw------- 1 root root 15784 Apr  4 19:03 'Ler PDF usando PyTeserat.ipynb'\n"
           ]
         }
       ]
